--- a/numpy.ipynb
+++ b/numpy.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 1,
    "id": "44d120d4",
    "metadata": {},
    "outputs": [],
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 2,
    "id": "f234d91c",
    "metadata": {},
    "outputs": [
@@ -38,7 +38,7 @@
        "array([1, 2, 3])"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "id": "af9c5336",
    "metadata": {},
    "outputs": [
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "id": "8ab230c1",
    "metadata": {},
    "outputs": [
@@ -94,7 +94,7 @@
        "array([22,  2,  3])"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -114,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 5,
    "id": "0d966381",
    "metadata": {},
    "outputs": [
@@ -124,7 +124,7 @@
        "array([2, 3])"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -135,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 6,
    "id": "fc9bd7a5",
    "metadata": {},
    "outputs": [
@@ -147,7 +147,7 @@
        "       [ 8,  9, 10]])"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -159,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 7,
    "id": "846773f0",
    "metadata": {},
    "outputs": [
@@ -169,7 +169,7 @@
        "np.int64(10)"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -196,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 8,
    "id": "fa7b6a58",
    "metadata": {},
    "outputs": [
@@ -206,7 +206,7 @@
        "2"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -225,7 +225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 9,
    "id": "09d5be5c",
    "metadata": {},
    "outputs": [
@@ -235,7 +235,7 @@
        "(3, 3)"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -246,7 +246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 10,
    "id": "fe3fdb9c",
    "metadata": {},
    "outputs": [
@@ -256,7 +256,7 @@
        "9"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -275,7 +275,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 11,
    "id": "bc5bb28a",
    "metadata": {},
    "outputs": [
@@ -285,7 +285,7 @@
        "dtype('int64')"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -320,7 +320,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 12,
    "id": "2a945d14",
    "metadata": {},
    "outputs": [
@@ -331,7 +331,7 @@
        "       [0., 0.]])"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -350,7 +350,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 13,
    "id": "c7d9c6a5",
    "metadata": {},
    "outputs": [
@@ -361,7 +361,7 @@
        "       [1., 1.]])"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -380,7 +380,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 14,
    "id": "94272d0b",
    "metadata": {},
    "outputs": [
@@ -391,7 +391,7 @@
        "       [1., 1.]])"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -410,7 +410,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 15,
    "id": "308acae5",
    "metadata": {},
    "outputs": [
@@ -420,7 +420,7 @@
        "array([0, 1, 2, 3])"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -447,7 +447,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 16,
    "id": "48a3121f",
    "metadata": {},
    "outputs": [],
@@ -465,7 +465,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 17,
    "id": "0d5e7b72",
    "metadata": {},
    "outputs": [
@@ -475,7 +475,7 @@
        "array([  7,   9,  22,  36,  78,  96, 100, 836])"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -495,7 +495,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 18,
    "id": "dd132d06",
    "metadata": {},
    "outputs": [],
@@ -506,7 +506,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 19,
    "id": "c99b836c",
    "metadata": {},
    "outputs": [
@@ -516,7 +516,7 @@
        "array([ 1,  2,  3,  4,  5,  6,  7,  8,  9, 10])"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -535,7 +535,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 20,
    "id": "63076341",
    "metadata": {},
    "outputs": [
@@ -554,7 +554,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 21,
    "id": "b824dc4d",
    "metadata": {},
    "outputs": [
@@ -575,7 +575,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 22,
    "id": "dee27364",
    "metadata": {},
    "outputs": [
@@ -585,7 +585,7 @@
        "(3, 2)"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -595,9 +595,572 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "c2f434e0",
+   "metadata": {},
+   "source": [
+    "#  Indexing and slicing"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "cf337ef8",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([1, 2, 3])"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data = np.array([1, 2, 3])\n",
+    "data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "1a509ae9",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "np.int64(2)"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data[1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "9fa29db9",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([1, 2])"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data[0:2]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "20c7fc24",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([2, 3])"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data[1:]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "0f0bacf0",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([2, 3])"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data[-2:]"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cf337ef8",
+   "id": "44120b30",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a2 = np.array([[1 , 2, 3, 4], [5, 6, 7, 8], [9, 10, 11, 12]])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "id": "dbeb2c54",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[3 3 4 4]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(a2[a2 < 5])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "id": "d15e27ec",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[ 2  4  6  8 10 12]\n"
+     ]
+    }
+   ],
+   "source": [
+    "divisible_by_2 = a[a%2==0]\n",
+    "print(divisible_by_2)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "419e231c",
+   "metadata": {},
+   "source": [
+    "# How to create an array from existing data"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5a5b0974",
+   "metadata": {},
+   "source": [
+    "This section covers slicing and indexing, np.vstack(), np.hstack(), np.hsplit()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "id": "e99a9e8b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a = np.array([1,  2,  3,  4,  5,  6,  7,  8,  9, 10])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "id": "94fe61b5",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[4 5 6 7 8]\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = a[3:8]\n",
+    "print(a)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "id": "9fc5b7e8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a1 = np.array([[1, 1],\n",
+    "               [2, 2]])\n",
+    "\n",
+    "a2 = np.array([[3, 3],\n",
+    "               [4, 4]])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ef9598db",
+   "metadata": {},
+   "source": [
+    "You can stack them vertically with vstack:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "id": "989e928f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[1, 1],\n",
+       "       [2, 2],\n",
+       "       [3, 3],\n",
+       "       [4, 4]])"
+      ]
+     },
+     "execution_count": 67,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.vstack((a1, a2))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2750a54b",
+   "metadata": {},
+   "source": [
+    "Or stack them horizontally with hstack"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "id": "46c48a2c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[1, 1, 3, 3],\n",
+       "       [2, 2, 4, 4]])"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.hstack((a1, a2))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c4ce075c",
+   "metadata": {},
+   "source": [
+    "# Basic array operations"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "id": "91bd280e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([2, 3])"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data = np.array([1, 2])\n",
+    "ones = np.ones(2, dtype=int)\n",
+    "data + ones"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "id": "3e801e0b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "np.int64(21)"
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a = np.array([[1,2,3],[4,5,6]])\n",
+    "a.sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "id": "8417329e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "b = np.array([[1, 1], [2, 2]])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "id": "4c7cc271",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([3, 3])"
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "b.sum(axis=0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "id": "5beef3e0",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([2, 4])"
+      ]
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "b.sum(axis=1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e3481e04",
+   "metadata": {},
+   "source": [
+    " # Broadcasting"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "id": "c2621318",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([1.6, 3.2])"
+      ]
+     },
+     "execution_count": 45,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data = np.array([1.0, 2.0])\n",
+    "data * 1.6"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "id": "e7be5118",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "np.float64(1.0)"
+      ]
+     },
+     "execution_count": 46,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data.min()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "id": "11819284",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "np.float64(2.0)"
+      ]
+     },
+     "execution_count": 47,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data.max()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "id": "62d890f7",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "np.float64(3.0)"
+      ]
+     },
+     "execution_count": 48,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data.sum()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4a204f20",
+   "metadata": {},
+   "source": [
+    "# More useful array operations"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "id": "c4ffc28e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a = np.array([[0.45053314, 0.17296777, 0.34376245, 0.5510652],\n",
+    "              [0.54627315, 0.05093587, 0.40067661, 0.55645993],\n",
+    "              [0.12697628, 0.82485143, 0.26590556, 0.56917101]])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "id": "4d3a8dac",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "np.float64(4.8595784)"
+      ]
+     },
+     "execution_count": 50,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a.sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "id": "9ecd6e4f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "np.float64(0.05093587)"
+      ]
+     },
+     "execution_count": 51,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a.min()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "id": "cc389bde",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0.12697628, 0.05093587, 0.26590556, 0.5510652 ])"
+      ]
+     },
+     "execution_count": 52,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a.min(axis=0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "cf5b2ce2",
    "metadata": {},
    "outputs": [],
    "source": []
