--- a/numpy.ipynb
+++ b/numpy.ipynb
@@ -604,7 +604,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 23,
    "id": "cf337ef8",
    "metadata": {},
    "outputs": [
@@ -614,7 +614,7 @@
        "array([1, 2, 3])"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -626,7 +626,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 24,
    "id": "1a509ae9",
    "metadata": {},
    "outputs": [
@@ -636,7 +636,7 @@
        "np.int64(2)"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -647,7 +647,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 25,
    "id": "9fa29db9",
    "metadata": {},
    "outputs": [
@@ -657,7 +657,7 @@
        "array([1, 2])"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -668,8 +668,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 26,
    "id": "20c7fc24",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([2, 3])"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data[1:]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "0f0bacf0",
    "metadata": {},
    "outputs": [
     {
@@ -684,33 +705,12 @@
     }
    ],
    "source": [
-    "data[1:]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 28,
-   "id": "0f0bacf0",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([2, 3])"
-      ]
-     },
-     "execution_count": 28,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
     "data[-2:]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "id": "44120b30",
    "metadata": {},
    "outputs": [],
@@ -720,7 +720,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 29,
    "id": "dbeb2c54",
    "metadata": {},
    "outputs": [
@@ -728,7 +728,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[3 3 4 4]\n"
+      "[1 2 3 4]\n"
      ]
     }
    ],
@@ -738,7 +738,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 30,
    "id": "d15e27ec",
    "metadata": {},
    "outputs": [
@@ -746,7 +746,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[ 2  4  6  8 10 12]\n"
+      "[0 2 4]\n"
      ]
     }
    ],
@@ -773,7 +773,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 31,
    "id": "e99a9e8b",
    "metadata": {},
    "outputs": [],
@@ -783,7 +783,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 32,
    "id": "94fe61b5",
    "metadata": {},
    "outputs": [
@@ -802,7 +802,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 33,
    "id": "9fc5b7e8",
    "metadata": {},
    "outputs": [],
@@ -824,7 +824,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 34,
    "id": "989e928f",
    "metadata": {},
    "outputs": [
@@ -837,7 +837,7 @@
        "       [4, 4]])"
       ]
      },
-     "execution_count": 67,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -856,7 +856,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 35,
    "id": "46c48a2c",
    "metadata": {},
    "outputs": [
@@ -867,7 +867,7 @@
        "       [2, 2, 4, 4]])"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -886,7 +886,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 36,
    "id": "91bd280e",
    "metadata": {},
    "outputs": [
@@ -896,7 +896,7 @@
        "array([2, 3])"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -909,7 +909,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 37,
    "id": "3e801e0b",
    "metadata": {},
    "outputs": [
@@ -919,7 +919,7 @@
        "np.int64(21)"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -931,7 +931,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 38,
    "id": "8417329e",
    "metadata": {},
    "outputs": [],
@@ -941,7 +941,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 39,
    "id": "4c7cc271",
    "metadata": {},
    "outputs": [
@@ -951,7 +951,7 @@
        "array([3, 3])"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -962,7 +962,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 40,
    "id": "5beef3e0",
    "metadata": {},
    "outputs": [
@@ -972,7 +972,7 @@
        "array([2, 4])"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -991,7 +991,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 41,
    "id": "c2621318",
    "metadata": {},
    "outputs": [
@@ -1001,7 +1001,7 @@
        "array([1.6, 3.2])"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1013,7 +1013,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 42,
    "id": "e7be5118",
    "metadata": {},
    "outputs": [
@@ -1023,7 +1023,7 @@
        "np.float64(1.0)"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1034,7 +1034,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 43,
    "id": "11819284",
    "metadata": {},
    "outputs": [
@@ -1044,7 +1044,7 @@
        "np.float64(2.0)"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1055,7 +1055,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 44,
    "id": "62d890f7",
    "metadata": {},
    "outputs": [
@@ -1065,7 +1065,7 @@
        "np.float64(3.0)"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1084,7 +1084,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 45,
    "id": "c4ffc28e",
    "metadata": {},
    "outputs": [],
@@ -1096,7 +1096,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 46,
    "id": "4d3a8dac",
    "metadata": {},
    "outputs": [
@@ -1106,7 +1106,7 @@
        "np.float64(4.8595784)"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1117,7 +1117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 47,
    "id": "9ecd6e4f",
    "metadata": {},
    "outputs": [
@@ -1127,7 +1127,7 @@
        "np.float64(0.05093587)"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1138,7 +1138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 48,
    "id": "cc389bde",
    "metadata": {},
    "outputs": [
@@ -1148,7 +1148,7 @@
        "array([0.12697628, 0.05093587, 0.26590556, 0.5510652 ])"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1158,9 +1158,501 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "cf658661",
+   "metadata": {},
+   "source": [
+    "#  Creating matrices"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f06dd635",
+   "metadata": {},
+   "source": [
+    "You can pass Python lists of lists to create a 2-D array (or “matrix”) to represent them in NumPy."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "id": "cf5b2ce2",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[1, 2],\n",
+       "       [3, 4],\n",
+       "       [5, 6]])"
+      ]
+     },
+     "execution_count": 50,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data = np.array([[1, 2], [3, 4], [5, 6]])\n",
+    "data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "id": "4b41405f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "np.int64(2)"
+      ]
+     },
+     "execution_count": 51,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data[0, 1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "id": "d58ea338",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[3, 4],\n",
+       "       [5, 6]])"
+      ]
+     },
+     "execution_count": 52,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data[1:3]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "05fad138",
+   "metadata": {},
+   "source": [
+    "#   Generating random numbers"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "id": "4cce4201",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[4, 2, 4, 0],\n",
+       "       [4, 4, 0, 1]])"
+      ]
+     },
+     "execution_count": 54,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "rng = np.random.default_rng()\n",
+    "rng.integers(5, size=(2, 4)) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 84,
+   "id": "9aae497e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a =  np.random.rand(3,2).round(2) * 100 "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 85,
+   "id": "7af8350b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[12, 79],\n",
+       "       [28, 38],\n",
+       "       [64, 99]])"
+      ]
+     },
+     "execution_count": 85,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a.astype(int)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "722d4d2a",
+   "metadata": {},
+   "source": [
+    "#   How to get unique items and counts"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "id": "a8a0214e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([11, 11, 12, 13, 14, 15, 16, 17, 12, 13, 11, 14, 18, 19, 20])"
+      ]
+     },
+     "execution_count": 61,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a = np.array([11, 11, 12, 13, 14, 15, 16, 17, 12, 13, 11, 14, 18, 19, 20])\n",
+    "a"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "id": "ffc7e353",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([11, 12, 13, 14, 15, 16, 17, 18, 19, 20])"
+      ]
+     },
+     "execution_count": 62,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.unique(a)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a63eb4da",
+   "metadata": {},
+   "source": [
+    "To get the indices of unique values in a NumPy array (an array of first index positions of unique values in the array), just pass the return_index argument in np.unique() as well as your array"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "id": "b8a7ca23",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[ 0  2  3  4  5  6  7 12 13 14]\n"
+     ]
+    }
+   ],
+   "source": [
+    "unique_values , indices_list  = np.unique( a, return_index=True )\n",
+    "print(indices_list)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "af939307",
+   "metadata": {},
+   "source": [
+    "You can pass the return_counts argument in np.unique() along with your array to get the frequency count of unique values in a NumPy array."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "id": "1a89eb3c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[3 2 2 2 1 1 1 1 1 1]\n"
+     ]
+    }
+   ],
+   "source": [
+    "unique_values, occurrence_count = np.unique(a, return_counts=True)\n",
+    "print(occurrence_count)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "82ce4b0f",
+   "metadata": {},
+   "source": [
+    "#   Transposing and reshaping a matrix"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6474862a",
+   "metadata": {},
+   "source": [
+    "This section covers arr.reshape(), arr.transpose(), arr.T"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "id": "60d23341",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[1, 2],\n",
+       "       [3, 4],\n",
+       "       [5, 6]])"
+      ]
+     },
+     "execution_count": 67,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data = np.array([[1,2],[3,4],[5,6]])\n",
+    "data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
+   "id": "3b285be1",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[1, 2, 3],\n",
+       "       [4, 5, 6]])"
+      ]
+     },
+     "execution_count": 68,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data.reshape(2, 3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "id": "dc992aac",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[1, 2],\n",
+       "       [3, 4],\n",
+       "       [5, 6]])"
+      ]
+     },
+     "execution_count": 69,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data.reshape(3, 2)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "cd9a399b",
+   "metadata": {},
+   "source": [
+    "You can transpose your array with arr.transpose()."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "id": "71dde734",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[1, 3, 5],\n",
+       "       [2, 4, 6]])"
+      ]
+     },
+     "execution_count": 70,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data.transpose()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "73add979",
+   "metadata": {},
+   "source": [
+    "You can also use arr.T:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
+   "id": "6ced59f7",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[1, 3, 5],\n",
+       "       [2, 4, 6]])"
+      ]
+     },
+     "execution_count": 71,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data.T"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f6bb9a2f",
+   "metadata": {},
+   "source": [
+    "#   How to reverse an array"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6f66dd84",
+   "metadata": {},
+   "source": [
+    "This section covers np.flip()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
+   "id": "ac7dcd41",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "arr = np.array([1, 2, 3, 4, 5, 6, 7, 8])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 77,
+   "id": "08f565d9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "reversed_arr = np.flip(arr)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 78,
+   "id": "67404e55",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Reversed Array:  [8 7 6 5 4 3 2 1]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('Reversed Array: ', reversed_arr)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 79,
+   "id": "bc7f9f7b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "arr_2d = np.array([[1, 2, 3, 4], [5, 6, 7, 8], [9, 10, 11, 12]])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 80,
+   "id": "c675bb73",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[12, 11, 10,  9],\n",
+       "       [ 8,  7,  6,  5],\n",
+       "       [ 4,  3,  2,  1]])"
+      ]
+     },
+     "execution_count": 80,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.flip(arr_2d)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cf5b2ce2",
+   "id": "a7790911",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fa86b9c3",
    "metadata": {},
    "outputs": [],
    "source": []
